Update requirements.txt to reflect new dependencies
Removed unused libraries and added new dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
 streamlit 
 pandas 
 numpy 
-matplotlib
 torch
-sklearn
-seaborn
-plotly
-scikit-learn
 torchvision
-torchaudio
-nltk
-PdfReader
+pillow
+requests
